Moved setting width and height into html to fix blurry line problem

--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,5 @@ body{
     margin-top: 50px;
 
     display: block;
-    width: 1000px;
-    height: 600px;
     background-color: white;
 }
